[tool.poetry]
name = "memogarden-utils"
version = "0.1.0"
description = "MemoGarden Utils - Shared utilities across packages"
authors = ["MemoGarden Contributors"]
readme = "README.md"
packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = "^3.13"
tomli = {version = "^2.0.0", python = "<3.11"}
python-dateutil = "^2.9.0.post0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
